/*
 * $Id: ChangeLog,v 1.918 2003/04/05 22:19:16 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-04-05 15:46 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    * Minor fix to getExpReal().

2003-04-05 19:15 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  ! source/rtl/Makefile
    ! minor fix

2003-04-05 16:55 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/pp/ppcore.c
    * added a cast for msvc.

2003-04-05 11:58 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * bin/bld.bat
    * Check for existence of bcc640.lib or NOT include it in lib list for bcc32

  * tests/pp.prg
  * tests/pp_harb.ch
    * Removed ?? from list of bi-chars, Clipper treats it as 2 tokens.

  * source/pp/ppcomp.c
  * source/pp/ppcore.c
    + Added hb_pp_NextToken() borrowed from pp.prg.
    ! Complete rewrite of main matching logic to fix long outstanding Clipper compatibility problems.

  /*
     NOTE: I wanted to fix this for the longest time, but for some reason really dreaded it. Pre-Processor
           was seriously NOT Clipper compatible regarding some critical issues that [likely] were not that
           common. But as I feared, with time, I got more and more reports of problems where a complete
           re-write of the matching engine was requires. Here are some of the more obvious examples of
           such problems:

              //---------------------------------------------
              #translate "hello" => Helloed()
              ? "hello"

              #translate KEY SUFFIX <x> => Correct( <x> )
              #translate SUFFIX <x> => Wrong( <x> )
              KEY SUFFIX "indeed"
              //---------------------------------------------

          Of course there were many similar variations. Well now after this rewrite the Pre-Processor should