@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.918 2003/04/05 22:19:16 lculik Exp $
+ * $Id: ChangeLog,v 1.919 2003/04/05 23:47:28 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,11 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-04-05 20:06 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * source/pp/ppcore.c
+    + Added static int NextStopper( char ** sSource, char * sDest )
+    * Changed stopper detection logic to use new NextStopper().
 
 2003-04-05 15:46 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/pp/ppcore.c
